fix(ui): wrong jump logic of resource group view (#425)
## What type of PR is this?

/kind bug

## What this PR does / why we need it:

fix wrong jump logic of resource group view.

--- a/ui/src/pages/insight/components/insightTabs/styles.module.less
+++ b/ui/src/pages/insight/components/insightTabs/styles.module.less
@@ -7,8 +7,11 @@
     margin-bottom: 10px;
     border-bottom: 1px solid #f1f1f1;
     overflow-x: scroll;
+    overflow-y: hidden;
+
     .tabs {
       display: flex;
+      // border-bottom: 1px solid #f1f1f1;
 
       .tab {
         background-color: rgba(0, 0, 0, 0.02);
@@ -46,7 +49,7 @@
     .add_box {
       cursor: pointer;
       border: 1px solid #f1f1f1;
-      border-bottom: none;
+      border-bottom: 1px solid transparent;
       padding: 9px 13px;
       border-radius: 8px 8px 0 0;
     }
